# hub.sr.ht

./: .gitignore  .golangci.yml  Makefile  README.md  config.example.ini  go.mod  go.sum  hub.sr.ht-initdb  hubsrht-initdb  hubsrht-migrate  pyproject.toml  run.py  schema.sql  setup.py  static
.builds/: alpine.yml  archlinux.yml  debian.yml
api/: go.mod  gqlgen.yml  server.go
api/graph/: events.go  gql.go  resolver.go  schema.graphqls  schema.resolvers.go  webhooks.go
api/loaders/: gen  generate.go  middleware.go
api/services/: generate.go
ariadne/: builds.toml.in  git.toml.in  hg.toml.in  hub.toml.in  lists.toml.in  todo.toml.in
contrib/: backfill_rids  ensure-webhooks
hubsrht/: app.py  builds.py  decorators.py  default_query.graphql  oauth.py  projects.py  schema.graphqls  services.py  trailers.py  webhooks.py
hubsrht/alembic/: env.py
hubsrht/blueprints/: mailing_lists.py  projects.py  public.py  sources.py  trackers.py  users.py  webhooks.py  webhooks_legacy.py
hubsrht/services/: __init__.py  builds.py  git.py  hg.py  lists.py  todo.py
hubsrht/templates/: dashboard.html  event-rss.html  event.html  featured-projects.html  index.html  mailing-list-new.html  mailing-lists-manage.html  mailing-lists.html  new-user-dashboard.html  profile-projects.html  profile-summary.html  profile.html  project-base.html  project-config.html  project-create.html  project-delete.html  project-feed-rss.html  project-feed.html  project-index.html  project-lists-new.html  project-mailing-lists-manage.html  project-mailing-lists.html  project-nav.html  project-rename.html  project-resource-new.html  projects.html  (+15 more)
migrations/: 0002_add_event_project_association.sql  0003_add_webhook_columns.sql  0004_set_webhook_columns_not_null.sql  0005_add_resource_ids.sql  0006_set_resource_ids_not_null.sql  0007_create_owner-id-project-name_type.sql  0008_repo-type_enum.sql  0009_rename_created_column.sql  0010_fix_summaryrepo_cascade.sql
scripts/: clean-python
scss/: main.scss
(+48 files in other folders)
